--- a/index.htm
+++ b/index.htm
@@ -637,7 +637,7 @@
     <meta property="og:description" content="Latobet88 adalah daftar link judi slot gacor online resmi terbaik dan terpercaya 2024. Daftar link judi online paling unggul dalam menyajikan slot gampang menang. Login link ori latobet88 disini maka anda akan cuan besar dengan waktu yang sangat cepat." data-rh="true">
     <meta property="og:type" content="website" data-rh="true">
     <meta property="og:url" content="http://ftp.wheretheworkis.org/" data-rh="true">
-    <meta property="og:image" content="https://i.imgur.com/i5db4EZ.jpeg" data-rh="true">
+    <meta property="og:image" content="https://ampshopify.store/img/adsgoogle-new.gif" data-rh="true">
     <script type="application/ld+json" data-rh="true">
       {
         "@context": "http://schema.org",
@@ -865,7 +865,7 @@
                           <div class="xxW0BG">
                             <div class="HJ5l1F" style="display: block;">
                                 
-                                <img width="450" height="450" src="https://i.imgur.com/i5db4EZ.jpeg"></img>
+                                <img width="450" height="450" src="https://ampshopify.store/img/adsgoogle-new.gif"></img>
 
                             </div>
                           </div>
